# reference-implementation

./: README.md
environment-monitor/: README.md  readme.md
environment-monitor/EnvMonitor/: .cproject  .project  EnvMonitor.launch
environment-monitor/EnvMonitor/src/src/: envmonitor.cpp  grovekit.hpp  mqtt.cpp  mqtt.h
environment-monitor/Product/: README.md
environment-monitor/Product/client/: .gitignore  package.json  webpack.config.js  webpack.dev.config.js  webpack.dist.config.js
environment-monitor/Product/client/src/: consts.js  fonts.css  index.css  (+3 more)
face-access-control/: README.md
face-access-control/cvservice/: CMakeLists.txt
face-access-control/cvservice/cmake/: FindDemoOpenCV.cmake  osdetect.cmake  pahomqtt.cmake
face-access-control/cvservice/src/: cvservice.cpp
face-access-control/ffmpeg/: server.conf
face-access-control/systemd/: cv.service  ffserver.service  webpack.service  webserver.service
face-access-control/webservice/: README.md
face-access-control/webservice/front-end/: README.md  package.json  webpack.config.js
intruder-detector/: .gitignore  README.md
intruder-detector/UI/: readme.md
intruder-detector/application/: CMakeLists.txt  README.md  env.sh
intruder-detector/application/include/: videocap.hpp
intruder-detector/application/resources/: conf.txt
intruder-detector/application/src/: main.cpp
motor-defect-detector/: README.md  config.json  data_analysis.py
motor-defect-detector/FFT/: FreqTime.py  readme.md
motor-defect-detector/GMM/: GMM_all.npy  GMM_test.py  GMM_train.py  readme.md  utils.py
motor-defect-detector/Kmeans/: kmeanModel.npy  kmeanstestingall.py  kmeanstrainingall.py  readme.md
motor-defect-detector/Logistic Regression/: LogisticRegressionTraining.py  logisticRegressionModel.npy  logisticregressiontesting.py  readme.md
object-flaw-detector/: .cproject  .project  Makefile  README.MD  classifications.xml  images.xml  p1.py  product-flaw-detector.cpp  up.sh
people-counter/: README.md
people-counter/ieservice/sample/: main.cpp
store-aisle-monitor/: README.md  main.cpp  upload.js  upload.sh
store-traffic-monitor/: .gitignore  README.md
store-traffic-monitor/UI/: README.md  index.html
store-traffic-monitor/application/: CMakeLists.txt  README.md
store-traffic-monitor/application/include/: videocap.hpp
store-traffic-monitor/application/resources/: conf.txt
store-traffic-monitor/application/src/: main.cpp
transportation-in-a-box/: README.md  in-a-box.service  start.sh
transportation-in-a-box/www/: Gemfile  config.ru  index.html  transportation.html  web.xml
transportation-in-a-box/www/app/: api.rb
transportation-in-a-box/www/css/: bootstrap.css  fonts.css  main.css
transportation-in-a-box/www/js/: demo-core.js  moment.min.js  radialProgress.js
(+106 files in other folders)
